--- a/ex01/index.html
+++ b/ex01/index.html
@@ -8,8 +8,8 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-    <p onclick="sayHallo()">クリックするとHallo worldがでます。</p>
+    <p onclick="sayHello()">クリックするとHello worldがでます。</p>
     <p class="test"></p>
-    <p onclick="eraseHallo()">クリックするとHallo worldがきえます。</p>
+    <p onclick="eraseHello()">クリックするとHello worldがきえます。</p>
 </body>
 </html>
