--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <p>
         <a href="./ex01/index.html">1日目??</a>
     </p>
+    <p>
+        <a href="https://github.com/nssuperx/JS_training">このページのリポジトリ</a>
+    </p>
 </body>
 </html>
