indexに2日目を追加

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-    <p>
-        <a href="./ex01/index.html">1日目??</a>
-    </p>
+    <p><a href="./ex01/index.html">1日目</a></p>
+    <p><a href="./ex02/index.html">2日目</a></p>
     <p>
         <a href="https://github.com/nssuperx/JS_training">このページのリポジトリ</a>
     </p>
