--- a/ex02/index.html
+++ b/ex02/index.html
@@ -8,12 +8,8 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-    <p onclick="sayHello()">クリックするとHello worldがでます。</p>
+    <p>クリックするとHello worldが<button onclick="addHello()">増える</button>ボタン。</p>
+    <p>クリックするとHello worldが<button onclick="eraseHello()">減る</button>ボタン。</p>
     <p class="test"></p>
-    <p class="test"></p>
-    <p class="test"></p>
-    <p class="test"></p>
-    <p class="test"></p>
-    <p onclick="eraseHello()">クリックするとHello worldがきえます。</p>
 </body>
 </html>
