戻れるようにした。

--- a/ex01/index.html
+++ b/ex01/index.html
@@ -11,5 +11,6 @@
     <p onclick="sayHello()">クリックするとHello worldがでます。</p>
     <p class="test"></p>
     <p onclick="eraseHello()">クリックするとHello worldがきえます。</p>
+    <p><a href="../index.html">戻る</a></p>
 </body>
 </html>
