--- a/ex02/index.html
+++ b/ex02/index.html
@@ -10,6 +10,7 @@
 <body>
     <p>クリックするとHello worldが<button onclick="addHello()">増える</button>ボタン。</p>
     <p>クリックするとHello worldが<button onclick="eraseHello()">減る</button>ボタン。</p>
+    <p><a href="../index.html">戻る</a></p>
     <p class="test"></p>
 </body>
 </html>
