--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 <body>
     <p><a href="./ex01/index.html">1日目</a></p>
     <p><a href="./ex02/index.html">2日目</a></p>
-    <p>
-        <a href="https://github.com/nssuperx/JS_training">このページのリポジトリ</a>
-    </p>
+    <p><a href="https://github.com/nssuperx/JS_training">このページのリポジトリ</a></p>
 </body>
 </html>
