1日目のメモを書いた

--- a/ex01/index.html
+++ b/ex01/index.html
@@ -15,7 +15,7 @@
 
     <hr>
     <h2>これはなにをやっているのか</h2>
-    <p>document.getElementsByClassNameを使ってclass名を探してinnerHTMLで文字列を代入している。<br>
+    <p>document.getElementsByClassNameを使ってclass名で要素を探してinnerHTMLで文字列を代入している。<br>
         getElementByidを使うのは<a href="https://nssuperx.github.io/software_engineering_kadai1/">前にやった</a>ことがあったので今回はgetElementsByClassNameの方を使った。<br>
     </p>
     <h2>参考にしたページ</h2>
