--- a/ex02/index.html
+++ b/ex02/index.html
@@ -8,9 +8,19 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
+    <h1>2日目</h1>
     <p>クリックするとHello worldが<button onclick="addHello()">増える</button>ボタン。</p>
     <p>クリックするとHello worldが<button onclick="eraseHello()">減る</button>ボタン。</p>
     <p><a href="../index.html">戻る</a></p>
     <p class="test"></p>
+    <hr>
+    <h2>これはなにをやっているのか</h2>
+    <p>
+        1日目と同じくclass名で要素を取得し、innerHTMLで文字列を代入している。<br>
+        これは文字列を追加じゃなくて、ボタンが押された回数分、for文を使って文字列を追加していったのを再描画している。（あとでもうちょっとスマートにやりたい）<br>
+        また、if文を使ってカウントがゼロ以下にならないようにしている。<br>
+        innerHTMLはhtmlをそのまま書き出すだけ？だから&lt;br&gt;タグとかを含めるとそのままhtmlとして解釈される。（たぶん）<br>
+        なので、このメモは下に押されていく。
+    </p>
 </body>
 </html>
