--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-    <p><a href="./ex01/index.html">1日目</a></p>
-    <p><a href="./ex02/index.html">2日目</a></p>
-    <p><a href="https://github.com/nssuperx/JS_training">このページのリポジトリ</a></p>
+    <h1>javascriptで毎日チャレンジ</h1>
+    <p>
+        <a href="./ex01/index.html">1日目</a><br>
+        <a href="./ex02/index.html">2日目</a><br>
+        <a href="./ex03/index.html">3日目</a><br>
+        <a href="https://github.com/nssuperx/JS_training">このページのリポジトリ</a>
+    </p>
 </body>
 </html>
