--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="./ex01/index.html">1日目</a><br>
         <a href="./ex02/index.html">2日目</a><br>
         <a href="./ex03/index.html">3日目</a><br>
+        <a href="./ex04/index.html">4日目</a><br>
         <a href="https://github.com/nssuperx/JS_training">このページのリポジトリ</a>
     </p>
 </body>
