--- a/ex04/index.html
+++ b/ex04/index.html
@@ -17,40 +17,40 @@
     <button onclick="changeColorClass3()">class3を塗る</button>
     <button onclick="changeColorWhiteClass3()">class3を白に</button>
 
-    <p class="class1">
+    <div class="class1">
         ここはclass1のところ
-        <p class="class2">
+        <div class="class2">
             ここはclass2
-            <p class="class3">
+            <div class="class3">
                 ここはclass3<br>
                 class3ここまで
-            </p>
+            </div>
             class2ここまで
-        </p>
-        <p>ここはclass1内の空白行<br></p>
-        <p class="class2">
+        </div>
+        <div>ここはclass1内の空白行<br></div>
+        <div class="class2">
             ここはclass2
-            <p class="class3">
+            <div class="class3">
                 ここはclass3<br>
                 class3ここまで
-            </p>
+            </div>
             class2ここまで
-        </p>
+        </div>
         class1ここまで
-    </p>
-    <p>ここは空白行<br></p>
-    <p class="class1">
+    </div>
+    <div>ここは空白行<br></div>
+    <div class="class1">
         ここはclass1のところ
-        <p class="class2">
+        <div class="class2">
             ここはclass2
-            <p class="class3">
+            <div class="class3">
                 ここはclass3<br>
                 class3ここまで
-            </p>
+            </div>
             class2ここまで
-        </p>
+        </div>
         class1ここまで
-    </p>
+    </div>
     <p><a href="../index.html">戻る</a></p>
     <p class="test"></p>
     <hr>
