--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a href="./ex02/index.html">2日目</a><br>
         <a href="./ex03/index.html">3日目</a><br>
         <a href="./ex04/index.html">4日目</a><br>
+        <a href="./ex05/index.html">5日目</a><br>
         <a href="https://github.com/nssuperx/JS_training">このページのリポジトリ</a>
     </p>
 </body>
