--- a/ex05/index.html
+++ b/ex05/index.html
@@ -23,14 +23,19 @@
     </p>
     <hr>
     <h2>これはなにをやっているのか</h2>
-    
+    <p>
+        今回は動きをつけてみたかったのでsetIntervalというものを使って時間を扱ってみた。<br>
+        javascriptにはsleep()みたいなのがないらしい。なので、ほかに似たようなのがないか探したところ、setInterval()とsetTimeout()を発見した。<br>
+        setIntervalでは遅延間隔を置いて関数を繰り返し呼び出す、といったことができる。<br>
+        処理自体はいつも通りgetElementsByClassName()で要素を取得、それから次の行に文字列代入、前の行に空文字列を代入しているだけである。<br>
+        今回も変な入力をさせないみたいな処理はしてないのでhtmlタグがそのまま入ります。<br>
+        スクリプトはカウンターとフラグをグローバル領域に宣言している。もっときれいに書くべきである。
+    </p>
     <h2>参考にしたページ</h2>
     <p>
         <ul>
-            <li><a href="https://developer.mozilla.org/ja/docs/Web/API/console">consoleの使い方</a></li>
-            <li><a href="https://developer.mozilla.org/ja/docs/Web/JavaScript/Guide/Grammar_and_types">javascriptの文法とデータ型</a></li>
-            <li><a href="https://developer.mozilla.org/ja/docs/Web/JavaScript/Data_structures">JavaScript のデータ型とデータ構造</a></li>
-            <li><a href="http://cya.sakura.ne.jp/js/string.htm">文字列処理</a></li>
+            <li><a href="https://developer.mozilla.org/ja/docs/Web/API/Window/setInterval">setInterval</a></li>
+            <li><a href="https://qiita.com/kouhe1/items/9c23604901039832d385">setInterval()やsetTimeout()で関数に引数を与えるには</a></li>
         </ul>
     </p>
     <script type="text/javascript" src="main.js"></script>
