--- a/ex06/index.html
+++ b/ex06/index.html
@@ -9,27 +9,17 @@
 <body>
     <h1>5日目</h1>
     <p>
-        <input type="text" size="40" placeholder="ここに何かを入力" class="inputtext">
-        <button onclick="startMoveString()">うごく</button>
-        <button onclick="stopString()">止まる</button>
+        <button onclick="startMoveString()">スタート</button>
+        <button onclick="stopString()">ストップ</button>
     </p>
     <p><a href="../index.html">戻る</a></p>
     <p>
-        <div class="movearea"></div><br>
-        <div class="movearea"></div><br>
-        <div class="movearea"></div><br>
-        <div class="movearea"></div><br>
-        <div class="movearea"></div><br>
+        
     </p>
     <hr>
     <h2>これはなにをやっているのか</h2>
     <p>
-        今回は動きをつけてみたかったのでsetIntervalというものを使って時間を扱ってみた。<br>
-        javascriptにはsleep()みたいなのがないらしい。なので、ほかに似たようなのがないか探したところ、setInterval()とsetTimeout()を発見した。<br>
-        setIntervalでは遅延間隔を置いて関数を繰り返し呼び出す、といったことができる。<br>
-        処理自体はいつも通りgetElementsByClassName()で要素を取得、それから次の行に文字列代入、前の行に空文字列を代入しているだけである。<br>
-        今回も変な入力をさせないみたいな処理はしてないのでhtmlタグがそのまま入ります。<br>
-        スクリプトはカウンターとフラグをグローバル領域に宣言している。もっときれいに書くべきである。
+        
     </p>
     <h2>参考にしたページ</h2>
     <p>
