--- a/ex06/index.html
+++ b/ex06/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>javascriptのれんしゅう5</title>
+    <title>javascriptのれんしゅう6</title>
 </head>
 <body>
-    <h1>5日目</h1>
+    <h1>6日目</h1>
     <p>
-        <button onclick="startMoveString()">スタート</button>
-        <button onclick="stopString()">ストップ</button>
+        <button onclick="startButtonDown()" id="startButton">スタート</button>
+        <button onclick="lapButtonDown()" id="lapButton">ラップ</button>
     </p>
     <p><a href="../index.html">戻る</a></p>
     <p>
-        
+        <div id="timerText"></div><br>
+        <div id="rapTime"></div><br>
     </p>
     <hr>
     <h2>これはなにをやっているのか</h2>
