--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="./ex03/index.html">3日目</a><br>
         <a href="./ex04/index.html">4日目</a><br>
         <a href="./ex05/index.html">5日目</a><br>
+        <a href="./ex06/index.html">6日目</a><br>
         <a href="https://github.com/nssuperx/JS_training">このページのリポジトリ</a>
     </p>
 </body>
