--- a/ex06/index.html
+++ b/ex06/index.html
@@ -15,7 +15,7 @@
     <p><a href="../index.html">戻る</a></p>
     <p>
         <div id="timerText"></div><br>
-        <div id="rapTime"></div><br>
+        <div id="lapTime"></div><br>
     </p>
     <hr>
     <h2>これはなにをやっているのか</h2>
