6日目参考にしたページ追加

--- a/ex06/index.html
+++ b/ex06/index.html
@@ -25,8 +25,9 @@
     <h2>参考にしたページ</h2>
     <p>
         <ul>
-            <li><a href="https://developer.mozilla.org/ja/docs/Web/API/Window/setInterval">setInterval</a></li>
-            <li><a href="https://qiita.com/kouhe1/items/9c23604901039832d385">setInterval()やsetTimeout()で関数に引数を与えるには</a></li>
+            <li><a href="https://hakuhin.jp/js/date.html">javascript 日付/時間</a></li>
+            <li><a href="https://developer.mozilla.org/ja/docs/Web/JavaScript/Reference/Global_Objects/Date">Dateオブジェクト</a></li>
+            <li><a href="https://developer.mozilla.org/ja/docs/Web/JavaScript/Reference/Global_Objects/Date/now">Date.now()</a></li>
         </ul>
     </p>
     <script type="text/javascript" src="main.js"></script>
