--- a/ex06/index.html
+++ b/ex06/index.html
@@ -14,7 +14,7 @@
     </p>
     <p><a href="../index.html">戻る</a></p>
     <p>
-        <div id="timerText"></div><br>
+        <div id="timerText">0</div><br>
         <div id="lapTime"></div><br>
     </p>
     <hr>
