6日目のメモを書いた

--- a/ex06/index.html
+++ b/ex06/index.html
@@ -20,7 +20,11 @@
     <hr>
     <h2>これはなにをやっているのか</h2>
     <p>
-        
+        タイマーを作った。<br>
+        Date.now()を使って時間を取得している。（正確には1970年1月1日午前0時0分0秒からのミリ秒のあれ）<br>
+        while文をぶん回そうと思ったが<a href="../ex05/index.html">昨日</a>タイマー制御をしてたので1秒間に60回処理させることにした。<br>
+        タイマーの計算には大量のグローバル変数を使用しており、計算は普通の計算をしている。<br>
+        時間の表示の整形は今回はしていない。今度やります。
     </p>
     <h2>参考にしたページ</h2>
     <p>
