--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="./ex04/index.html">4日目</a><br>
         <a href="./ex05/index.html">5日目</a><br>
         <a href="./ex06/index.html">6日目</a><br>
+        <a href="./ex07/index.html">7日目</a><br>
         <a href="https://github.com/nssuperx/JS_training">このページのリポジトリ</a>
     </p>
 </body>
