--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="./ex05/index.html">5日目</a><br>
         <a href="./ex06/index.html">6日目</a><br>
         <a href="./ex07/index.html">7日目</a><br>
+        <a href="./ex08/index.html">8日目</a><br>
         <a href="https://github.com/nssuperx/JS_training">このページのリポジトリ</a>
     </p>
 </body>
