--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="./ex06/index.html">6日目</a><br>
         <a href="./ex07/index.html">7日目</a><br>
         <a href="./ex08/index.html">8日目</a><br>
+        <a href="./ex09/index.html">9日目</a><br>
         <a href="https://github.com/nssuperx/JS_training">このページのリポジトリ</a>
     </p>
 </body>
