--- a/ex09/index.html
+++ b/ex09/index.html
@@ -24,8 +24,9 @@
         </ul>
         onclickはhtmlをjavascriptのコードで汚すからよくない？らしい。<br>
         なので今回はaddEventListenerというものを使っている。<br>
+        ほんとは全く理解していない。
     </p>
-    <a href="https://github.com/nssuperx/JS_training">このページのソースコード</a>
+    <a href="https://github.com/nssuperx/JS_training/tree/master/ex09">このページのソースコード</a>
     <h2>参考にしたページ</h2>
     <p>
         <a href="https://developer.mozilla.org/ja/docs/Learn/JavaScript/First_steps/What_is_JavaScript">JavaScriptとは</a>&nbsp;onclickあんまりよくないみたいなことが書いてある<br>
