--- a/ex09/index.html
+++ b/ex09/index.html
@@ -31,7 +31,7 @@
     <p>
         <a href="https://developer.mozilla.org/ja/docs/Learn/JavaScript/First_steps/What_is_JavaScript">JavaScriptとは</a>&nbsp;onclickあんまりよくないみたいなことが書いてある<br>
         <a href="https://developer.mozilla.org/ja/docs/Web/API/EventTarget/addEventListener">EventTarget.addEventListener()</a><br>
-        <a href="https://qiita.com/_ayk_study/items/519bb661a746f96727ce">addEventlistenerについて</a>
+        <a href="https://qiita.com/_ayk_study/items/519bb661a746f96727ce">addEventlistenerについて</a><br>
         <a href="https://qiita.com/hosomichi/items/49500fea5fdf43f59c58">イベントのキャプチャとバブリング</a>
     </p>
 </body>
