--- a/ex09/index.html
+++ b/ex09/index.html
@@ -17,7 +17,7 @@
     <hr>
     <h2>これはなにをやっているのか</h2>
     <p>
-        <a href="../ex01/index.html">1日目との違いは以下になる</a>
+        <a href="../ex01/index.html">1日目</a>との違いは以下になる
         <ul>
             <li>html側でonclickでの関数呼び出しをしていない。</li>
             <li>普通にgetElementByIdでやってる。</li>
