ソースコードのURLのリンクもつけた

--- a/ex01/index.html
+++ b/ex01/index.html
@@ -19,6 +19,7 @@
     <p>document.getElementsByClassNameを使ってclass名で要素を取得してinnerHTMLで文字列を代入している。<br>
         getElementByidを使うのは<a href="https://nssuperx.github.io/software_engineering_kadai1/">前にやった</a>ことがあったので今回はgetElementsByClassNameの方を使った。<br>
     </p>
+    <a href="https://github.com/nssuperx/JS_training/tree/master/ex01">このページのソースコード</a>
     <h2>参考にしたページ</h2>
     <p>
         <a href="https://developer.mozilla.org/ja/docs/Web/API/Document/getElementsByClassName">document.getElementsByClassName()</a><br>
