--- a/ex02/index.html
+++ b/ex02/index.html
@@ -22,5 +22,6 @@
         innerHTMLはhtmlをそのまま書き出すだけ？だから&lt;br&gt;タグとかを含めるとそのままhtmlとして解釈される。（たぶん）<br>
         なので、このメモは下に押されていく。
     </p>
+    <a href="https://github.com/nssuperx/JS_training/tree/master/ex02">このページのソースコード</a>
 </body>
 </html>
