--- a/ex03/index.html
+++ b/ex03/index.html
@@ -34,6 +34,7 @@
         &lt;br&gt;タグは入力してほしくありません。<br>
     </p>
     <p>かなり頑張ったけど、文字列処理の時に一回文字列を変数に代入したりとか切り出しとかしてるので、負荷自体はfor文回したときとあんまり変わらんかも。</p>
+    <a href="https://github.com/nssuperx/JS_training/tree/master/ex03">このページのソースコード</a>
 
     <h2>参考にしたページ</h2>
     <p>
