--- a/ex04/index.html
+++ b/ex04/index.html
@@ -82,6 +82,7 @@
         正直なにやってんのかわかってない。javascript難しい。<br>
         時間ができたらスクリプトの方にもコメントつけます。
     </p>
+    <a href="https://github.com/nssuperx/JS_training/tree/master/ex04">このページのソースコード</a>
 
     <h2>参考にしたページ</h2>
     <p>
