--- a/ex05/index.html
+++ b/ex05/index.html
@@ -31,6 +31,7 @@
         今回も変な入力をさせないみたいな処理はしてないのでhtmlタグがそのまま入ります。<br>
         スクリプトはカウンターとフラグをグローバル領域に宣言している。もっときれいに書くべきである。
     </p>
+    <a href="https://github.com/nssuperx/JS_training/tree/master/ex05">このページのソースコード</a>
     <h2>参考にしたページ</h2>
     <p>
         <ul>
