--- a/ex06/index.html
+++ b/ex06/index.html
@@ -26,6 +26,7 @@
         タイマーの計算には大量のグローバル変数を使用しており、計算は普通の計算をしている。<br>
         時間の表示の整形は今回はしていない。今度やります。
     </p>
+    <a href="https://github.com/nssuperx/JS_training/tree/master/ex06">このページのソースコード</a>
     <h2>参考にしたページ</h2>
     <p>
         <ul>
