--- a/ex07/index.html
+++ b/ex07/index.html
@@ -25,6 +25,7 @@
         とくに計算効率をよくしたとかはない。<br>
         ラップタイムのところは、新しい値を文字列の先頭（一番上）に持ってくるようにしたので、コードだけ見るとめっちゃ頭悪そう。
     </p>
+    <a href="https://github.com/nssuperx/JS_training/tree/master/ex07">このページのソースコード</a>
     <h2>参考にしたページ</h2>
     <p>
         <ul>
