--- a/ex08/index.html
+++ b/ex08/index.html
@@ -30,6 +30,7 @@
         <div onclick="omakememo()">ここをクリックするとおまけの説明が見れる。</div>
         <div id="omake" onclick="innerHTML = ''"></div>
     </p>
+    <a href="https://github.com/nssuperx/JS_training/tree/master/ex08">このページのソースコード</a>
     <h2>参考にしたページ</h2>
     <p>
         <ul>
