--- a/ex01/index.html
+++ b/ex01/index.html
@@ -18,6 +18,7 @@
     <h2>これはなにをやっているのか</h2>
     <p>document.getElementsByClassNameを使ってclass名で要素を取得してinnerHTMLで文字列を代入している。<br>
         getElementByidを使うのは<a href="https://nssuperx.github.io/software_engineering_kadai1/">前にやった</a>ことがあったので今回はgetElementsByClassNameの方を使った。<br>
+        <a href="../ex09/index.html">9日目</a>に別のやり方で同じことをしました。
     </p>
     <a href="https://github.com/nssuperx/JS_training/tree/master/ex01">このページのソースコード</a>
     <h2>参考にしたページ</h2>
