--- a/ex10/index.html
+++ b/ex10/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>javascriptのれんしゅう2</title>
+    <title>javascriptのれんしゅう10</title>
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-    <h1>2日目</h1>
+    <h1>10日目</h1>
     <p><a href="../index.html">戻る</a></p>
     <p>クリックするとHello worldが<button onclick="addHello()">増える</button>ボタン。</p>
     <p>クリックするとHello worldが<button onclick="eraseHello()">減る</button>ボタン。</p>
-    <p class="test"></p>
+    <p id="parent">親要素</p>
     <hr>
     <h2>これはなにをやっているのか</h2>
     <p>
