--- a/ex10/index.html
+++ b/ex10/index.html
@@ -12,6 +12,7 @@
     <p><a href="../index.html">戻る</a></p>
     <p>クリックするとHello worldが<button onclick="addHello()">増える</button>ボタン。</p>
     <p>クリックするとHello worldが<button onclick="eraseHello()">減る</button>ボタン。</p>
+    <p>クリックするとHello worldが<button onclick="changeHello()">ひらがなになる</button>ボタン。</p>
     <p id="parent">親要素</p>
     <hr>
     <h2>これはなにをやっているのか</h2>
@@ -22,6 +23,15 @@
         innerHTMLはhtmlをそのまま書き出すだけ？だから&lt;br&gt;タグとかを含めるとそのままhtmlとして解釈される。（たぶん）<br>
         なので、このメモは下に押されていく。
     </p>
-    <a href="https://github.com/nssuperx/JS_training/tree/master/ex02">このページのソースコード</a>
+
+    <h2>参考にしたページ</h2>
+    <p>
+        <ul>
+            <li><a href="https://developer.mozilla.org/ja/docs/Web/API/Document/createElement">Document.createElement</a></li>
+            <li><a href="https://javascript.step-learn.com/contents/J101-createelement.html">createElement() 要素を作成する</a></li>
+            <li><a href="https://qiita.com/kouh/items/dfc14d25ccb4e50afe89">ライブラリを使わない素のJavaScriptでDOM操作</a></li>
+        </ul>
+    </p>
+    <a href="https://github.com/nssuperx/JS_training/tree/master/ex10">このページのソースコード</a>
 </body>
 </html>
