--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="./ex07/index.html">7日目</a><br>
         <a href="./ex08/index.html">8日目</a><br>
         <a href="./ex09/index.html">9日目</a><br>
+        <a href="./ex10/index.html">10日目</a><br>
         <a href="https://github.com/nssuperx/JS_training">このページのリポジトリ</a>
     </p>
 </body>
