10回目メモ書いた

--- a/ex10/index.html
+++ b/ex10/index.html
@@ -17,11 +17,15 @@
     <hr>
     <h2>これはなにをやっているのか</h2>
     <p>
-        1日目と同じくclass名で要素を取得し、innerHTMLで文字列を代入している。<br>
-        これは文字列を追加じゃなくて、ボタンが押された回数分、for文を使って文字列を追加していったのを再描画している。（あとでもうちょっとスマートにやりたい）<br>
-        また、if文を使ってカウントがゼロ以下にならないようにしている。<br>
-        innerHTMLはhtmlをそのまま書き出すだけ？だから&lt;br&gt;タグとかを含めるとそのままhtmlとして解釈される。（たぶん）<br>
-        なので、このメモは下に押されていく。
+        <a href="../ex02/index.html">2日目</a>との違いは以下になる
+        <ul>
+            <li>要素を作ってそのなかに文字列をいれている。</li>
+            <li>要素を作るときにクラスも設定することで一括処理ができるようになった。</li>
+        </ul>
+        今回はスクリプトの方にまじめにコメントつけたので、<a href="https://github.com/nssuperx/JS_training/tree/master/ex10">そっち</a>見たほうがわかりやすい。<br>
+        子要素を作ってあげてclass名を設定、こうすることで要素の取得（getElementsByClassName）が簡単になりいろいろ扱いやすくなった。<br>
+        追加と削除も、要素の追加と削除をするだけなのでわけのわからん文字列処理とかしてない。<br>
+        なぜはじめからこうしなかったのか。
     </p>
 
     <h2>参考にしたページ</h2>
