2回目のに10回目のリンクをつけた

--- a/ex02/index.html
+++ b/ex02/index.html
@@ -21,6 +21,7 @@
         また、if文を使ってカウントがゼロ以下にならないようにしている。<br>
         innerHTMLはhtmlをそのまま書き出すだけ？だから&lt;br&gt;タグとかを含めるとそのままhtmlとして解釈される。（たぶん）<br>
         なので、このメモは下に押されていく。
+        <a href="../ex10/index.html">10日目</a>に別のやり方で同じことをしました。
     </p>
     <a href="https://github.com/nssuperx/JS_training/tree/master/ex02">このページのソースコード</a>
 </body>
