10回目リンク修正

--- a/ex10/index.html
+++ b/ex10/index.html
@@ -22,7 +22,7 @@
             <li>要素を作ってそのなかに文字列をいれている。</li>
             <li>要素を作るときにクラスも設定することで一括処理ができるようになった。</li>
         </ul>
-        今回はスクリプトの方にまじめにコメントつけたので、<a href="https://github.com/nssuperx/JS_training/tree/master/ex10">そっち</a>見たほうがわかりやすい。<br>
+        今回はスクリプトの方にまじめにコメントつけたので、<a href="https://github.com/nssuperx/JS_training/tree/master/ex10/main.js">そっち</a>見たほうがわかりやすい。<br>
         子要素を作ってあげてclass名を設定、こうすることで要素の取得（getElementsByClassName）が簡単になりいろいろ扱いやすくなった。<br>
         追加と削除も、要素の追加と削除をするだけなのでわけのわからん文字列処理とかしてない。<br>
         なぜはじめからこうしなかったのか。
