--- a/ex02/index.html
+++ b/ex02/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-    <h1>2日目</h1>
+    <h1>2回目</h1>
     <p><a href="../index.html">戻る</a></p>
     <p>クリックするとHello worldが<button onclick="addHello()">増える</button>ボタン。</p>
     <p>クリックするとHello worldが<button onclick="eraseHello()">減る</button>ボタン。</p>
@@ -16,12 +16,12 @@
     <hr>
     <h2>これはなにをやっているのか</h2>
     <p>
-        1日目と同じくclass名で要素を取得し、innerHTMLで文字列を代入している。<br>
+        1回目と同じくclass名で要素を取得し、innerHTMLで文字列を代入している。<br>
         これは文字列を追加じゃなくて、ボタンが押された回数分、for文を使って文字列を追加していったのを再描画している。（あとでもうちょっとスマートにやりたい）<br>
         また、if文を使ってカウントがゼロ以下にならないようにしている。<br>
         innerHTMLはhtmlをそのまま書き出すだけ？だから&lt;br&gt;タグとかを含めるとそのままhtmlとして解釈される。（たぶん）<br>
         なので、このメモは下に押されていく。
-        <a href="../ex10/index.html">10日目</a>に別のやり方で同じことをしました。
+        <a href="../ex10/index.html">10回目</a>に別のやり方で同じことをしました。
     </p>
     <a href="https://github.com/nssuperx/JS_training/tree/master/ex02">このページのソースコード</a>
 </body>
