--- a/ex03/index.html
+++ b/ex03/index.html
@@ -7,7 +7,7 @@
     <title>javascriptのれんしゅう3</title>
 </head>
 <body>
-    <h1>3日目</h1>
+    <h1>3回目</h1>
     <p><a href="../index.html">戻る</a></p>
     <p>
         <input type="text" size="40" placeholder="ここに何かを入力" class="inputtext">
@@ -18,8 +18,8 @@
     <hr>
     <h2>これはなにをやっているのか</h2>
     <p>
-        2日目と同じ感じ。おもにしていることは文字列処理。<br>
-        2日目と違うところは、以下の点である。
+        2回目と同じ感じ。おもにしていることは文字列処理。<br>
+        2回目と違うところは、以下の点である。
         <ul>
             <li>文字列追加の時は追加してるだけ。for文で毎回生成みたいなことはしてない。</li>
             <li>消去してるときは気合で文字列処理。
