--- a/ex07/index.html
+++ b/ex07/index.html
@@ -7,7 +7,7 @@
     <title>javascriptのれんしゅう7</title>
 </head>
 <body>
-    <h1>7日目</h1>
+    <h1>7回目</h1>
     <p><a href="../index.html">戻る</a></p>
     <p>
         <button onclick="startButtonDown()" id="startButton">スタート</button>
@@ -21,7 +21,7 @@
     <h2>これはなにをやっているのか</h2>
     <p>
         ストップウォッチを作った。<br>
-        <a href="../ex06/index.html">昨日</a>のをストップウォッチっぽく文字列を整形した。<br>
+        <a href="../ex06/index.html">前回</a>のをストップウォッチっぽく文字列を整形した。<br>
         とくに計算効率をよくしたとかはない。<br>
         ラップタイムのところは、新しい値を文字列の先頭（一番上）に持ってくるようにしたので、コードだけ見るとめっちゃ頭悪そう。
     </p>
