--- a/ex08/index.html
+++ b/ex08/index.html
@@ -7,7 +7,7 @@
     <title>javascriptのれんしゅう8</title>
 </head>
 <body>
-    <h1>8日目</h1>
+    <h1>8回目</h1>
     <p><a href="../index.html">戻る</a></p>
     <p>
         <button onclick="startButtonDown()" id="startButton">スタート</button>
@@ -20,7 +20,7 @@
     <h2>これはなにをやっているのか</h2>
     <p>
         10秒キッチンタイマーを作った。超かっこいいです。<br>
-        やってることは<a href="../ex07/index.html">昨日</a>のの応用。<br>
+        やってることは<a href="../ex07/index.html">前回</a>のの応用。<br>
         今回も大量のグローバル変数を駆使している。あたまわるい。<br>
         今後改善するのであればは以下のようなのが挙げられる。
         <ul>
