--- a/ex09/index.html
+++ b/ex09/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-    <h1>9日目</h1>
+    <h1>9回目</h1>
     <p><a href="../index.html">戻る</a></p>
     <p id="sayButton">クリックするとHello worldがでます。</p>
     <p id="textArea"></p>
@@ -17,7 +17,7 @@
     <hr>
     <h2>これはなにをやっているのか</h2>
     <p>
-        <a href="../ex01/index.html">1日目</a>との違いは以下になる
+        <a href="../ex01/index.html">1回目</a>との違いは以下になる
         <ul>
             <li>html側でonclickでの関数呼び出しをしていない。</li>
             <li>普通にgetElementByIdでやってる。</li>
