--- a/ex10/index.html
+++ b/ex10/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-    <h1>10日目</h1>
+    <h1>10回目</h1>
     <p><a href="../index.html">戻る</a></p>
     <p>クリックするとHello worldが<button onclick="addHello()">増える</button>ボタン。</p>
     <p>クリックするとHello worldが<button onclick="eraseHello()">減る</button>ボタン。</p>
@@ -17,7 +17,7 @@
     <hr>
     <h2>これはなにをやっているのか</h2>
     <p>
-        <a href="../ex02/index.html">2日目</a>との違いは以下になる
+        <a href="../ex02/index.html">2回目</a>との違いは以下になる
         <ul>
             <li>要素を作ってそのなかに文字列をいれている。</li>
             <li>要素を作るときにクラスも設定することで一括処理ができるようになった。</li>
