--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <h1>javascriptで毎日チャレンジ</h1>
     <p>
-        <a href="./ex01/index.html">1日目</a><br>
-        <a href="./ex02/index.html">2日目</a><br>
-        <a href="./ex03/index.html">3日目</a><br>
-        <a href="./ex04/index.html">4日目</a><br>
-        <a href="./ex05/index.html">5日目</a><br>
-        <a href="./ex06/index.html">6日目</a><br>
-        <a href="./ex07/index.html">7日目</a><br>
-        <a href="./ex08/index.html">8日目</a><br>
-        <a href="./ex09/index.html">9日目</a><br>
-        <a href="./ex10/index.html">10日目</a><br>
+        <a href="./ex01/index.html">1回目</a><br>
+        <a href="./ex02/index.html">2回目</a><br>
+        <a href="./ex03/index.html">3回目</a><br>
+        <a href="./ex04/index.html">4回目</a><br>
+        <a href="./ex05/index.html">5回目</a><br>
+        <a href="./ex06/index.html">6回目</a><br>
+        <a href="./ex07/index.html">7回目</a><br>
+        <a href="./ex08/index.html">8回目</a><br>
+        <a href="./ex09/index.html">9回目</a><br>
+        <a href="./ex10/index.html">10回目</a><br>
         <a href="https://github.com/nssuperx/JS_training">このページのリポジトリ</a>
     </p>
 </body>
