--- a/ex02/index.html
+++ b/ex02/index.html
@@ -20,7 +20,7 @@
         これは文字列を追加じゃなくて、ボタンが押された回数分、for文を使って文字列を追加していったのを再描画している。（あとでもうちょっとスマートにやりたい）<br>
         また、if文を使ってカウントがゼロ以下にならないようにしている。<br>
         innerHTMLはhtmlをそのまま書き出すだけ？だから&lt;br&gt;タグとかを含めるとそのままhtmlとして解釈される。（たぶん）<br>
-        なので、このメモは下に押されていく。
+        なので、このメモは下に押されていく。<br>
         <a href="../ex10/index.html">10回目</a>に別のやり方で同じことをしました。
     </p>
     <a href="https://github.com/nssuperx/JS_training/tree/master/ex02">このページのソースコード</a>
