参考ページ書いた

--- a/ex11/index.html
+++ b/ex11/index.html
@@ -31,9 +31,9 @@
     <h2>参考にしたページ</h2>
     <p>
         <ul>
-            <li><a href="https://developer.mozilla.org/ja/docs/Web/API/Document/createElement">Document.createElement</a></li>
-            <li><a href="https://javascript.step-learn.com/contents/J101-createelement.html">createElement() 要素を作成する</a></li>
-            <li><a href="https://qiita.com/kouh/items/dfc14d25ccb4e50afe89">ライブラリを使わない素のJavaScriptでDOM操作</a></li>
+            <li><a href="https://qiita.com/phi/items/3b10288b02c87057c006">javascript 配列の合計値とか求める</a></li>
+            <li><a href="https://developer.mozilla.org/ja/docs/Web/JavaScript/Reference/Global_Objects/Array/reduce">Array.prototype.reduce()</a></li>
+            <li><a href="https://qiita.com/chihiro/items/1047e40514a778c08baa">javascript reduce</a></li>
         </ul>
     </p>
     <a href="https://github.com/nssuperx/JS_training/tree/master/ex10">このページのソースコード</a>
