タイトルとか修正

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>javascriptのれんしゅう</title>
 </head>
 <body>
-    <h1>javascriptで毎日チャレンジ</h1>
+    <h1>javascriptでチャレンジ</h1>
     <p>
         <a href="./ex01/index.html">1回目</a><br>
         <a href="./ex02/index.html">2回目</a><br>
@@ -19,6 +19,7 @@
         <a href="./ex08/index.html">8回目</a><br>
         <a href="./ex09/index.html">9回目</a><br>
         <a href="./ex10/index.html">10回目</a><br>
+        <a href="./ex11/index.html">11回目</a><br>
         <a href="https://github.com/nssuperx/JS_training">このページのリポジトリ</a>
     </p>
 </body>
